# payment_processor

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: error_handlers.py  router.py
app/api/dependencies/: __init__.py  auth.py  services.py
app/api/extra/controllers/: health.py  metrics.py
app/api/v1/payments/: __init__.py
app/api/v1/payments/controllers/: __init__.py  payments_controller.py
app/api/v1/payments/schemas/: __init__.py  payment_request_schema.py  payment_response_schema.py
app/api/v1/payments/services/: __init__.py  exceptions.py  outbox_dispatcher_service.py  payments_service.py
app/broker/: __init__.py  outbox_publisher.py  rabbit_outbox_publisher.py
app/consumer/: __init__.py  main.py
app/consumer/schemas/: __init__.py  payment_created_event_schema.py  webhook_payload_schema.py
app/consumer/services/: __init__.py  payment_consumer_service.py  payment_gateway_simulator.py  webhook_sender.py
app/db/: __init__.py  base.py  session.py
app/db/dao/: __init__.py  outbox_event_dao.py  payment_dao.py
app/db/enums/: __init__.py  currency_enum.py  payment_status_enum.py
app/db/models/: __init__.py  outbox_event.py  payment.py
app/utils/: logger_setup.py
app/utils/enums/: log_level_enum.py
migrations/: env.py
migrations/versions/: 5f2d5b5a6a8d_add_payments_and_outbox_tables.py
tests/: test_config.py  test_consumer_topology.py  test_db_models.py  test_logger_setup.py  test_migrations.py  test_outbox_dispatcher_service.py  test_payment_consumer_service.py  test_payments_api.py  test_payments_controller.py  test_payments_service.py  test_smoke.py  test_webhook_sender.py
